Closed
Bug 1669108
Opened 5 years ago
Closed 5 years ago
LanguageTag.cpp: error: variable 'ok' set but not used [-Werror=unused-but-set-variable]
Categories
(Core :: JavaScript: Internationalization API, defect, P3)
Core
JavaScript: Internationalization API
Tracking
()
RESOLVED
FIXED
83 Branch
| Tracking | Status | |
|---|---|---|
| firefox83 | --- | fixed |
People
(Reporter: sfink, Assigned: sfink)
Details
Attachments
(1 file)
This is an opt warning in gcc only. I hit it because the rooting hazard analysis compiles a non-debug shell with gcc.
| Assignee | ||
Comment 1•5 years ago
|
||
Pushed by sfink@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/67b85d96daab
Unused MOZ_ASSERTed variable in non-DEBUG opt gcc compile r=anba
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox83:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•