Bug 1669108 - Unused MOZ_ASSERTed variable in non-DEBUG opt gcc compile r=anba

Differential Revision: https://phabricator.services.mozilla.com/D92349